<resources>
    <string name="app_name">ATH Sample</string>
    <string name="searchHint">Search...</string>
    <string name="users">Users</string>
    <string name="hello">Hello</string>
    <string name="yes">Yse</string>
    <string name="no">No</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="done">Done</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="EnterCodeHere">Enter Code here..</string>
    <string name="newPassword">New Password</string>
    <string name="singUpWelcome">Sign up</string>
    <string name="singInWelcome">Sign in</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="newNote">New Note</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="firstNameError">Please Enter Your FirstName!</string>
    <string name="lastNameError">Please Enter Your LastName!</string>
    <string name="usernameError">Please Enter Username!</string>
    <string name="passwordError">Please Enter Password</string>
    <string name="phoneNumberError">Please Enter Your PhoneNumber!</string>
    <string name="emailError">Please Enter Valid Email!</string>
    <string name="logoutDialogTitle">Logout!</string>
    <string name="sendCode">Send Code</string>
    <string name="codeError">Please Enter Your Code Here!</string>
    <string name="wrongCode">Make sure you enter the right code!</string>
    <string name="wrongEmail">Please Enter Valid Email!</string>
    <string name="wrongPhoneNumber">Please Enter Valid Phone Number!</string>
    <string name="resetPassword">Reset Password</string>
    <string name="resetPasswordIsSuccess">Reset password is successful!</string>
    <string name="logoutDialogMessage">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="forgotPassword">Forgot Password?</string>
</resources>