<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlack">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_sign_in_page" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButtonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="56dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetPassword"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

            <EditText
                android:id="@+id/codeResetPasswordEditText"
                style="@style/Widget.AppCompat.EditText.Noties"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="66dp"
                android:hint="@string/EnterCodeHere" />

            <EditText
                android:id="@+id/passwordResetPasswordEditText"
                style="@style/Widget.AppCompat.EditText.Noties"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="66dp"
                android:background="@drawable/background_noties_edit_text"
                android:hint="@string/newPassword"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginResetPasswordButton"
                style="@style/Widget.MaterialComponent.Button.Noties"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="66dp"
                android:text="@string/login" />
        </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>