<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlack">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_sign_up_page" />

    <ImageView
        android:id="@+id/backButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="50dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

        <EditText
            android:id="@+id/emailSignUpEditText"
            style="@style/Widget.AppCompat.EditText.Noties"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="66dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_noties_edit_text"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/usernameSignUpEditText"
            style="@style/Widget.AppCompat.EditText.Noties"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="66dp"
            android:background="@drawable/background_noties_edit_text"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/passwordSignUpEditText"
            style="@style/Widget.AppCompat.EditText.Noties"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="66dp"
            android:background="@drawable/background_noties_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/Widget.MaterialComponent.Button.Noties"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/signUp" />
    </LinearLayout>

</FrameLayout>